--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,20 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'org.jetbrains.kotlin.plugin.compose'
 
-ext.compose_version = '1.2.1'
+ext.compose_version = '1.7.4'
 
 static def releaseAppName() {
     return "FakeLocation"
 }
 
 android {
-    compileSdkVersion 33
+    namespace "com.xposed.hook"
+    compileSdk 34
     defaultConfig {
         applicationId "com.xposed.hook"
-        minSdkVersion 21
-        targetSdkVersion 29
+        minSdk 34
+        targetSdk 34
         versionCode 17
         versionName "1.6.2"
     }
@@ -33,25 +35,26 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_21
+        targetCompatibility JavaVersion.VERSION_21
     }
 
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = "21"
     }
 
     buildFeatures {
         compose true
+        buildConfig true
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion = "1.3.0"
+        kotlinCompilerExtensionVersion = "2.0.21"
     }
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
 
     implementation "androidx.compose.ui:ui:$compose_version"
     // Tooling support (Previews, etc.)
@@ -64,9 +67,9 @@ dependencies {
     implementation "androidx.compose.material:material-icons-core:$compose_version"
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
     // Integration with activities
-    implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation 'androidx.activity:activity-compose:1.9.3'
     // Integration with ViewModels
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.8.6'
     // Integration with observables
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
 
